# typeruster

./: .gitignore  Cargo.toml  README.md
args/: Cargo.toml
args/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  result.rs
extract_text/: Cargo.toml
extract_text/src/: lib.rs  mots_surannes.rs
extract_text/src/fix/: computer.rs  french.rs
extract_text/src/source/: mod.rs
src/: main.rs  text.rs
termion/: Cargo.toml
termion/src/: main.rs
text/: Cargo.toml
text/src/: lib.rs
text/src/fix/: azerty.rs  bepo.rs  computer.rs  english.rs  french.rs  german.rs  mod.rs
text/src/source/: file.rs  mod.rs  mots_surannes.rs  tazzon.rs
