[package]
name = "termion"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
engine = { path="../engine" }
text = { path="../text" }
args = { path="../args" }
